<resources>
    <string name="app_name">RP Regulator</string>
    <string name="app_logo">App Logo</string>
    <string name="blessing_icon">blessing icon</string>
    <string name="name">Name</string>
    <string name="intesity">Intesity</string>
    <string name="description">Description</string>
    <string name="add_photo">add photo</string>
    <string name="first_appearance">First Appearance</string>
    <string name="todo">TODO</string>
    <string name="stats">Stats</string>
    <string name="skills">Skills</string>
    <string name="inventory">Inventory</string>
    <string name="players">Players</string>
    <string name="main">Main</string>
    <string name="status">Status</string>
    <string name="paperwork">Paperwork</string>
    <string name="notes">Notes</string>
    <string name="chars_and_monsters">Chars and Monsters</string>
    <string name="settings">Settings</string>
    <string name="rp_instagram">RP Instagram</string>
    <string name="value">Value</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="new_pin_again">New Pin Again</string>
    <string name="health_points">HEALTH POINTS</string>
    <string name="x25">x25</string>
    <string name="the_amount_of_damage_you_can_take">The amount of damage you can take</string>
    <string name="_25">25</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="character_name">Character Name:</string>
    <string name="eqiupment">Eqiupment</string>
    <string name="coins">Coins</string>
    <string name="_1">+1</string>
    <string name="_10">+10</string>
    <string name="_100">+100</string>
    <string name="minus1">-1</string>
    <string name="minus10">-10</string>
    <string name="minus100">-100</string>
    <string name="skill_name">Skill Name</string>
    <string name="curse_name">Curse Name:</string>
    <string name="intensity">Intensity:</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="login">login</string>
    <string name="change_pin">Change Pin</string>
    <string name="logout">LOGOUT</string>
    <string name="cost">Cost</string>
    <string name="type">Type</string>
    <string name="blessing_name">Blessing Name:</string>
    <string name="creature_name">Creature Name</string>
    <string name="item_name">Item Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="active">Active</string>
    <string name="passive">Passive</string>
    <string name="value_x">Value x</string>


</resources>