<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.rpregulator.viewmodel.SkillDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor">

        <View
            android:id="@+id/textBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="143dp" />

        <ImageView
            android:id="@+id/imgOfAdd"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/skills"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSkillName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgOfAdd"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.skillName}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSkillCost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/cost"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"

            app:layout_constraintEnd_toEndOf="@id/etSkillName"
            app:layout_constraintTop_toBottomOf="@+id/etSkillName"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.skillCost}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/skillTypeRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/etSkillCost"
            app:layout_constraintStart_toStartOf="@id/etSkillName"
            app:layout_constraintTop_toTopOf="@+id/etSkillCost">

            <RadioButton
                android:id="@+id/radioActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableStart="@drawable/ic_active"
                android:onClick="@{onClick->viewModel.setTypeToActive()}"
                android:text="@string/active" />

            <RadioButton
                android:id="@+id/radioPassive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_passive"
                android:onClick="@{onClick->viewModel.setTypeToPassive()}"
                android:text="@string/passive" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSkillDesc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginTop="50dp"
            android:hint="@string/description"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSkillCost"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:text="@={viewModel.skillDesc}"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:onClick="@{onClick -> viewModel.editData()}"
            android:src="@drawable/ic_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSkillDesc" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>